--- a/custom_bootloader/User app/MDK-ARM/Blinking_led.uvprojx
+++ b/custom_bootloader/User app/MDK-ARM/Blinking_led.uvprojx
@@ -274,7 +274,7 @@
               </OCR_RVCT3>
               <OCR_RVCT4>
                 <Type>1</Type>
-                <StartAddress>0x8001000</StartAddress>
+                <StartAddress>0x8001c00</StartAddress>
                 <Size>0x10000</Size>
               </OCR_RVCT4>
               <OCR_RVCT5>
@@ -366,7 +366,7 @@
             <noStLib>0</noStLib>
             <RepFail>1</RepFail>
             <useFile>0</useFile>
-            <TextAddressRange>0x08001000</TextAddressRange>
+            <TextAddressRange>0x08001C00</TextAddressRange>
             <DataAddressRange>0x20000000</DataAddressRange>
             <pXoBase></pXoBase>
             <ScatterFile>Blinking_led\Blinking_led.sct</ScatterFile>
